--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
 
 
     </div>
+    
+       <footer class="foot">
+        <h4 class="foot-line">Built with &#10084;&#65039; by Chetan Singh</h4>
+        <p> For Educational Purpose only- No <i class="fa fa-copyright" aria-hidden="true"></i> intended</p>
+    </footer>
 
 
 </body>
